--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
     <title>JumpStart</title>
 
+    <link rel="stylesheet" type="text/css" href="./resources/css/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-
-    <link rel="stylesheet" type="text/css" href="./resources/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css" />
+
+
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -18,6 +19,21 @@
 
   </head>
   <body>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="containere">
+       <ul>
+         <li>Explore</li>
+         <li>Start a project</li>
+         <li>About us</li>
+       </div>
+    </nav>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
+    <script src="./resources/js/main.js"></script>
 
   </body>
 </html>
