navbar href Added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="containere">
-       <ul>
-         <li>Explore</li>
-         <li>Start a project</li>
-         <li>About us</li>
+       <ul id="navbar-top">
+         <li class="navbar-top-list" href="">Explore</li>
+         <li class="navbar-top-list" href="">Start a project</li>
+         <li class="navbar-top-list" href="">About us</li>
        </div>
     </nav>
 
