sign in an collapse Added

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
          <li><a href="#">Start a project</a></li>
          <li><a href="#">About us</a></li>
        </ul>
-       <ul class="nav navbar-nav navbar-right">
+       <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
          <li><img src="./resource/images/logo.png" class="navbar-brand navbar-right navbar-collapse" /></li>
+         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
        </ul>
      </div>
     </nav>
@@ -34,9 +36,10 @@
 
 <!-- This is the jumbotron design with picture navigation -->
     <div class="jumbotron jumbotron-bike">
-      <div class="container">
+      <div class="container-fluid">
         <span class="jumbotron-header">Get Going.</span>
-          <p class="jumbotron-text">Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+          <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+          <a href="#" class="btn btn-info btn-lg" role="button">Jump In</a>
       </div>
     </div>
 
@@ -51,7 +54,7 @@
           <p class="nav-img-text">GET THINKING.</p>
         </div>
         <div class="jumbotron-image-navbar col-xs-3">
-          <p class="nav-img-text">GET CREATIVE.</p>
+          <p class="nav-img-text">GET CREATING.</p>
         </div>
         <div class="jumbotron-image-navbar col-xs-3">
           <p class="nav-img-text">GET STARTED.</p>
@@ -63,7 +66,7 @@
 <!-- Featured Section of Website -->
     <div class="container featured-project">
       <div class="row">
-        <h2 class="col-xs-12">Featured Project</h2>
+        <h2 class="col-xs-12 color-text">Featured Project</h2>
       </div>
       <div class="row">
        <div class="col-xs-12 col-md-6">
@@ -79,7 +82,7 @@
            Italy â€” through beautiful cinematography and narration.</br></p>
        </div>
        <div class="margin col-xs-6 col-md-3">
-           <h3>Product Categories</h3>
+           <h3 class="color-text">Product Categories</h3>
             <ul>
               <li>Art</li>
               <li>Books</li>
@@ -105,35 +108,48 @@
 <!-- Projects Section -->
     <div class="container project-section">
       <div class="row">
-        <h2 class="col-xs-12">Projects</h2>
+        <h2 class="col-xs-12 color-text">Projects</h2>
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-4">
           <div class="image-container">
-            <img src=""/>
-            <h1>The Right Tights</h1>
+            <img src="resource/images/project1.png"/>
+            <h3>The Right Tights</h3>
             <p>by Riley Mae</p>
             <p> These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
           </div>
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="image-container">
-            <img src=""/>
-            <h1>Peppermint Smart Home</h1>
+            <img src="resource/images/project2.png"/>
+            <h3>Peppermint Smart Home</h3>
             <p>by Brian McDonald</p>
             <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
           </div>
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="image-container">
-            <img src=""/>
-            <h1>American Streetlife</h1>
+            <img src="resource/images/project3.png"/>
+            <h3>American Streetlife</h3>
             <p>by Patrick Wallace</p>
             <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
           </div>
         </div>
       </div>
     </div>
+
+<!-- Having Trouble Footer -->
+
+   <div class="container-fluid having-trouble">
+     <div class="row">
+      <div class="col-xs-12">
+        <h1><strong>Having trouble thinking of an idea?</strong></h1>
+        <p class="having-trouble-width">Inventorsâ€™ block strikes at the worst times. But thatâ€™s all changed with Jumpstartâ€™s Good Idea Generator Lite (GIGLi)</p>
+        <a href="#" class="btn btn-info btn-lg" role="button">Learn More</a>
+      </div>
+     </div>
+   </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
