navbar disaper Added

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
          <li><a href="#">Start a project</a></li>
          <li><a href="#">About us</a></li>
        </ul>
-       <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
-         <li><img src="./resource/images/logo.png" class="navbar-brand navbar-right navbar-collapse" /></li>
+       <ul class="nav navbar-nav navbar-right">
+         <li><img src="./resource/images/logo.png" class="navbar-brand navbar-right navbar-collapse collapse" /></li>
          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
        </ul>
@@ -172,15 +172,14 @@
 
 <!-- Having Trouble Footer -->
 
-   <div class="container-fluid having-trouble">
-     <div class="row">
-      <div class="col-xs-12">
-        <h1><strong>Having trouble thinking of an idea?</strong></h1>
-        <p class="having-trouble-width">Inventorsâ€™ block strikes at the worst times. But thatâ€™s all changed with Jumpstartâ€™s Good Idea Generator Lite (GIGLi)</p>
-        <a href="#" class="btn btn-info btn-lg" role="button">Learn More</a>
-      </div>
-     </div>
-   </div>
+  <div class="container-fluid having-trouble">
+    <div class="col-xs-12">
+      <h1><strong>Having trouble thinking of an idea?</strong></h1>
+      <p class="having-trouble-width">Inventorsâ€™ block strikes at the worst times. But thatâ€™s all changed with Jumpstartâ€™s Good Idea Generator Lite (GIGLi)</p>
+      <a href="#" class="btn btn-info btn-lg" role="button">Learn More</a>
+    </div>
+  </div>
+
 
 
    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
