jumbotron image Added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <!-- This is the jumbotron design with picture navigation -->
-
+<div class"container-fluid fixed">
   <div class="carousel">
     <div class="jumbotron jumbotron-bike">
       <div class="container-fluid">
@@ -92,8 +92,22 @@
         </div>
       </div>
     </div>
+  </div>
 
-
+<!-- Video image -->
+<div class="homepage-hero-module">
+    <div class="video-container">
+        <div class="filter"></div>
+        <video autoplay loop class="fillWidth">
+            <source src="resource/video/mp4/moving-forward.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+            <source src="resource/video/webm/Moving-Forward.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+        </video>
+        <p><video src="resources/videos/excursion.mp4" autoplay loop></video></p>
+        <div class="poster hidden">
+            <img src="resource/video/snapshots/moving-forward.jpg" alt="">
+        </div>
+    </div>
+</div>
 
 <!-- Featured Section of Website -->
     <div class="container featured-project">
